--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'org.litepal.android:core:2.0.0'
+    implementation 'com.nightonke:boommenu:2.1.1'
 //    implementation 'com.android.support:percent:26.0.0-alpha1'
 }
