--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.a92317.ltka">
 
     <application
@@ -9,7 +10,8 @@
         android:label="爱记账"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/FontStyle">
+        android:theme="@style/FontStyle"
+        tools:replace="android:label">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTask">
